# abe_policy

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release_on_tags.yml
src/: access_policy.rs  attribute.rs  error.rs  lib.rs  policy.rs  tests.rs
src/interfaces/: ffi.rs  mod.rs  wasm_bindgen.rs
src/interfaces/ffi/: access_policy.rs  error.rs  macros.rs  mod.rs  policy.rs
src/interfaces/wasm_bindgen/: mod.rs
tests/: non_regression_tests.rs  policy.json
