[package]
name = "abe_policy"
version = "3.0.1"
edition = "2021"
authors = [
  "Bruno Grieder <bruno.grieder@cosmian.com>",
  "Théophile Brézot <theophile.brezot@cosmian.com>",
]
description = "Policy and attributes definition for ABE cryptosystems"
documentation = "https://docs.rs/abe_policy/"
license = "MIT/Apache-2.0"
repository = "https://github.com/Cosmian/abe_policy"

[features]
interface=[]
ffi=["interface"]
wasm_bindgen=["interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]
